crates/oxc_react_compiler/tests/snapshots/error.invalid-async-captured-factory-wrapper.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-async-captured-factory-wrapper.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Cannot reassign variable in async function", labels: [LabeledSpan { label: Some("Cannot reassign `count`"), span: Span { start: 63, end: 68 }, primary: true }, LabeledSpan { label: Some("`count` is declared here"), span: Span { start: 29, end: 34 }, primary: false }], help: Some("Reassigning a variable in an async function can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Error, code: OxcCode { scope: Some("react-compiler"), number: Some("Immutability") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/immutability") } }

No changes.
